RESOLVED FIXED156308
CRASH in AudioDestinationNode::render()
https://bugs.webkit.org/show_bug.cgi?id=156308
Summary CRASH in AudioDestinationNode::render()
Jer Noble
Reported 2016-04-06 13:40:25 PDT
CRASH in AudioDestinationNode::render()
Attachments
Patch (2.72 KB, patch)
2016-04-06 13:43 PDT, Jer Noble
no flags
Patch (2.53 KB, patch)
2016-04-08 15:31 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2016-04-06 13:41:12 PDT
Jer Noble
Comment 2 2016-04-06 13:43:54 PDT
WebKit Commit Bot
Comment 3 2016-04-06 14:21:50 PDT
Comment on attachment 275814 [details] Patch Clearing flags on attachment: 275814 Committed r199116: <http://trac.webkit.org/changeset/199116>
WebKit Commit Bot
Comment 4 2016-04-06 14:21:53 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 5 2016-04-08 15:31:52 PDT
Reopening to attach new patch.
Jer Noble
Comment 6 2016-04-08 15:31:53 PDT
Jer Noble
Comment 7 2016-04-08 15:41:55 PDT
Ryan Haddad
Comment 8 2016-04-08 15:47:12 PDT
Jer Noble
Comment 9 2016-04-08 15:55:37 PDT
Landed 32-bit iOS build fix in: Committed r199253: <http://trac.webkit.org/changeset/199253>
Note You need to log in before you can comment on or make changes to this bug.